opti -- TODO: xss & perf

--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -36,6 +36,7 @@
       }
 
       span {
+        opacity: 1;
         transform: translateX(0);
         transition: opacity 0.2s ease, transform 0.5s ease;
       }
